[gd_scene load_steps=21 format=2]

[ext_resource path="res://Gstore_api/icon/logo.png" type="Texture" id=1]
[ext_resource path="res://Gstore_api/Gtheme.tres" type="Theme" id=2]
[ext_resource path="res://Gstore_api/login.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/8bitoperator.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Gstore_api/font.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Gstore_api/textbox_def.tres" type="StyleBox" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.207843, 0.192157, 0.192157, 1 )

[sub_resource type="DynamicFont" id=2]
size = 27
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.160784, 0.160784, 0.160784, 1 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 31
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 23
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[sub_resource type="DynamicFont" id=10]
size = 21
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=11]
size = 21
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.231373, 0.227451, 0.227451, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.133333, 0.121569, 0.121569, 1 )

[sub_resource type="DynamicFont" id=14]
size = 24
font_data = ExtResource( 5 )

[node name="login_Gstore" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="gui" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -277.0
margin_top = -255.5
margin_right = 277.0
margin_bottom = 255.5
size_flags_vertical = 3
theme = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="panel" type="Panel" parent="gui"]
anchor_right = 1.0
margin_bottom = 239.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="logo" type="TextureRect" parent="gui/panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -133.0
margin_right = 133.0
margin_bottom = 245.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="login" type="Control" parent="gui"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -277.0
margin_top = -263.0
margin_right = 277.0
__meta__ = {
"_edit_lock_": true
}

[node name="user" type="LineEdit" parent="gui/login"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -245.5
margin_top = -113.5
margin_right = 245.5
margin_bottom = -54.5
custom_styles/read_only = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_selected = Color( 0.447059, 0.423529, 0.423529, 1 )
align = 1
placeholder_text = "Nombre de usuario"
placeholder_alpha = 0.259
__meta__ = {
"_edit_lock_": true
}

[node name="pass" type="LineEdit" parent="gui/login"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -245.5
margin_top = -39.5
margin_right = 245.5
margin_bottom = 19.5
custom_styles/read_only = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_selected = Color( 0.447059, 0.423529, 0.423529, 1 )
align = 1
secret = true
context_menu_enabled = false
placeholder_text = "Contraseña"
placeholder_alpha = 0.259
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="gui/login"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -85.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="iniciar" type="Button" parent="gui/login"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -245.0
margin_top = 61.5
margin_right = 246.0
margin_bottom = 117.5
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 2 )
text = "Iniciar Seccion"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="lg" type="Control" parent="gui"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -264.0
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="gui/lg"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -192.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="logout" type="Button" parent="gui/lg/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -257.0
margin_top = 12.0
margin_right = 256.0
margin_bottom = 76.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Cerrar Seccion"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="gui/lg/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -257.0
margin_top = -71.0
margin_right = 256.0
margin_bottom = -7.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Jugar"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="nombre" type="Label" parent="gui/lg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -242.0
margin_top = -125.0
margin_right = 241.0
margin_bottom = -70.0
custom_fonts/font = SubResource( 7 )
text = "user"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="no" type="Panel" parent="gui"]
visible = false
margin_top = 240.5
margin_right = 554.0
margin_bottom = 513.5
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="gui/no"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.5
margin_top = -112.5
margin_right = 255.5
margin_bottom = -23.5
custom_fonts/font = SubResource( 8 )
text = "Usuario o contraseña incorrecta"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="restart" type="Button" parent="gui/no"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -194.0
margin_top = 44.5
margin_right = 194.0
margin_bottom = 95.5
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
text = "Reintentar"
__meta__ = {
"_edit_lock_": true
}

[node name="alert" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -365.0
margin_top = -207.0
margin_right = 365.0
margin_bottom = 206.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="alert"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -25.5
margin_right = 225.0
margin_bottom = 25.5
custom_fonts/font = SubResource( 11 )
text = "Conectando con el servidor..."
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="sgui" type="Panel" parent="alert"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -99.0
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="back" type="Button" parent="alert/sgui"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -34.0
margin_right = 287.0
margin_bottom = 34.0
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 14 )
text = "Salir"
__meta__ = {
"_edit_lock_": true
}

[node name="next" type="Button" parent="alert/sgui"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -287.0
margin_top = -34.0
margin_right = -20.0
margin_bottom = 34.0
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 14 )
text = "Continuar"
__meta__ = {
"_edit_lock_": true
}

[node name="ini" type="HTTPRequest" parent="."]
max_redirects = 12

[node name="espera" type="Timer" parent="."]
wait_time = 3.0

[node name="initial" type="HTTPRequest" parent="."]
[connection signal="visibility_changed" from="." to="." method="_on_login_Gstore_visibility_changed"]
[connection signal="pressed" from="gui/login/iniciar" to="." method="_on_iniciar_pressed"]
[connection signal="pressed" from="gui/lg/Panel/logout" to="." method="_on_logout_pressed"]
[connection signal="pressed" from="gui/lg/Panel/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="gui/no/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="alert/sgui/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="alert/sgui/next" to="." method="_on_next_pressed"]
[connection signal="timeout" from="espera" to="." method="_on_espera_timeout"]
[connection signal="request_completed" from="initial" to="." method="_on_initial_request_completed"]
